fix: Link icon alignment (#1562)

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -51,7 +51,7 @@
     align-items: center;
     justify-content: center;
     border-style: solid;
-    grid-gap: var(--size-2);
+    grid-gap: var(--gutter-medium);
     border-width: var(--border-width-thinner);
     background-color: var(--colour-neutral-lightest);
     border-radius: inherit;
