--- a/src/components/Link/Link.module.scss
+++ b/src/components/Link/Link.module.scss
@@ -15,9 +15,11 @@
 }
 
 .inner {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    grid-gap: var(--size-2);
+    display: inline-flex;
+    align-items: flex-start;
+    grid-gap: var(--gutter-medium);
+}
+
+.icon {
+    padding-top: var(--gutter-small);
 }
